# EchoPaw

./: .gitignore  EchoPaw.py  LLM.py  RAG.py  RAG_demo.py  README.md  STT.py  TTS.py  Web.html  Web.py  pyproject.toml  requirements.txt
RAG_Demo_Memory/: index.faiss  index.pkl  memory_stats.json
demo_memory/: index.faiss  index.pkl  memory_stats.json
