[project]
name = "paw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "faiss-cpu>=1.11.0",
    "faster-whisper>=1.1.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "json5>=0.12.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-huggingface>=0.3.0",
    "numpy>=2.3.0",
    "optimum>=1.26.1",
    "pathlib>=1.0.1",
    "pyaudio>=0.2.14",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
]
